# shellgallery

./: .env.sample  .gitignore  .replit  DEPLOYMENT.md  README.md  alternative_image_search.py  app.py  bing_visual_search.py  config.py  data_manager.py  direct_scraper.py  google_image_search.py  image_file_manager.py  image_search.py  metadata_manager.py  pyproject.toml  replit.md  requirements.txt  sample_data_loader.py  shell_search.py
attached_assets/: planning_1753735605680.md  task_1753735605675.md
blueprints/: api_blueprint.py  image_blueprint.py  main_blueprint.py
data/: metadata.json
static/css/: styles.css
static/js/: gallery.js
templates/: index.html
tests/: test_metadata_manager.py
